# SDEV-240-81

./: .gitmodules  README.md
week-03/: CMakeLists.txt  bmi.cpp  findErrors.cpp  icecream.cpp  table.cpp
week-04/: CMakeLists.txt  Week4_Color-1.cpp  Week4_Color-2.cpp  Week4_PetTag.cpp  Week4_areas.cpp  testNum.cpp
week-05/: CMakeLists.txt  Week5_areas2.cpp  Week5_cookies.cpp  Week5_loops.cpp  Week5_summation.cpp
week-06/: CMakeLists.txt  Week6_areas3.cpp  Week6_areas4.cpp  Week6_choice.cpp  Week6_fortunes.cpp  Week6_kiloConverter.cpp  Week6_swapNums.cpp
week-07/: CMakeLists.txt  Sheet.txt  main.cpp
week-09/: CMakeLists.txt  Week9_functions.cpp
week-10/: CMakeLists.txt  Test.cpp  main.cpp
