cmake_minimum_required(VERSION 3.15)
project(week-06)

set(CMAKE_CXX_STANDARD 14)

# uncomment the one your working on
add_executable(week-06
        Week6_areas3.cpp
#        Week6_areas4.cpp
#        Week6_choice.cpp
#        Week6_fortunes.cpp
#       Week6_kiloConverter.cpp
#       Week6_swapNums.cpp
)
